Added some mock data and wired to display

--- a/app/addressBook/addressBook.html
+++ b/app/addressBook/addressBook.html
@@ -1,1 +1,7 @@
-<h1>Address Book</h1>
+<h1>Contacts</h1>
+<ul>
+  <li ng-repeat="c in contacts">
+    <div ng-include src="'contact/contact.html'"></div>
+  </li>
+</ul>
+
